--- a/papers/templates/home.html
+++ b/papers/templates/home.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 <div class="flex flex-col items-center justify-center min-h-[60vh]">
-    <h1 class="text-3xl font-bold text-gray-800 mb-2 text-center">Welcome to the Academic Paper Repository</h1>
+    <h1 class="text-3xl font-bold text-gray-800 mb-2 text-center">Welcome to the Semantic Academic Paper Repository</h1>
+    <h2 class="text-lg text-gray-600 mb-6 text-center">Discover, Upload, and Explore Academic Papers</h2>
   <div class="w-full items-center justify-center max-w-2x ">
-    
     <form action="{% url 'paper_list' %}" method="get"
       class="w-full flex flex-col gap-2 items-center justify-center mb-4">
         <input type="search"
