--- a/papers/templates/partials/_save_button_list.html
+++ b/papers/templates/partials/_save_button_list.html
@@ -8,7 +8,7 @@
                htmx.ajax('GET', '{% url 'toast' %}?message=Paper removed!', '#toast-container')"
     >
         {% csrf_token %}
-        <button type="submit" class="btn btn-netiral w-full">
+        <button type="submit" class="btn btn-xs btn-outline">
             Unsave Paper
         </button>
     </form>
@@ -21,7 +21,7 @@
                htmx.ajax('GET', '{% url 'toast' %}?message=Paper saved!', '#toast-container')"
     >
         {% csrf_token %}
-        <button type="submit" class="btn btn-neutral w-full">
+        <button type="submit" class="btn btn-xs btn-outline">
             Save Paper
         </button>
     </form>
